--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -15,5 +15,5 @@
 
 \begin{document}
 	This is for the initial commit.	
-	\\ This is the second second commit.
+	\\ This is the second second second commit.
 \end{document}
